methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:31: error: ';' expected but 'for' found.
}for (i<- 1 to 3) {
 ^